syntax = "proto3";

package employee_ms;

service EmployeesService {
    rpc CreateNewEmployee(CreateNewEmployeeRequest) returns (StringEmployeeDataResponse) {}
    rpc UpdateEmployee(UpdateEmployeeRequest) returns (StringEmployeeDataResponse) {}
    rpc DeleteEmployee(DeleteEmployeeRequest) returns (StringEmployeeDataResponse) {}
    rpc CreateNewUser(CreateNewUserRequest) returns (StringUserDataResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (StringUserDataResponse){}
    rpc DeleteUser(DeleteUserRequest) returns (StringUserDataResponse){}
}

// message CreateNewEmployeeRequest {
//     string id =1;
// }

// message StringEmployeeDataResponse {
//     string id = 1;
// }
message Employee {
    string name = 1;
    int32 age = 2;
    string identityNumber = 3;
    string phoneNumber = 4;
    string managerId = 5;
}

message StringEmployeeDataResponse {
    int32 code = 1;
    string message = 2;
    Employee result = 3;
}

message User{
    string name = 1;
    int32 age = 2;
    string identityNumber = 3;
    string phoneNumber = 4;
    string employeeId = 5;
}

message StringUserDataResponse {
    int32 code = 1;
    string message = 2;
    User result = 3;
}

message CreateNewEmployeeInput {
    string name = 1;
    int32 age = 2;
    string identityNumber = 3;
    string phoneNumber = 4;
    string managerId = 5;
}
message CreateNewEmployeeRequest {
    CreateNewEmployeeInput createNewEmployeeInput = 1;
}

message UpdateEmployeeRequest {
    UpdateEmployeeInput updateEmployeeInput = 1;
    message UpdateEmployeeInput {
        string id = 1;
        string name = 2;
        int32 age = 3;
        string identityNumber = 4;
        string phoneNumber = 5;
        string managerId = 6;
    }
}

message DeleteEmployeeRequest {
    DeleteEmployeeInput deleteEmployeeInput = 1;
    message DeleteEmployeeInput {
        string id = 1;
    }
}

message CreateNewUserRequest{
    CreateNewUserInput createNewUserInput = 1;
    message CreateNewUserInput{
    string name = 1;
    int32 age = 2;
    string identityNumber = 3;
    string phoneNumber = 4;
    string employeeId = 5;
    }
}

message UpdateUserRequest{
    UpdateUserInput updateUserInput = 1;
    message UpdateUserInput{
    string name = 1;
    int32 age = 2;
    string identityNumber = 3;
    string phoneNumber = 4;
    string employeeId = 5;
    }
}

message DeleteUserRequest{
    DeleteUserInput deleteUserInput = 1;
    message DeleteUserInput{
        string id = 1;
    }
}